# TopoGen

./: .cursorrules  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  analysis.py  baseline.yml  baseline_scenario.yml  build.sh  config.yml  index.html  mkdocs.yml  pyproject.toml  run.sh  runner.py  single_router.yml  single_router_scenario.yml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  python-test.yml
dev/: analyze_integrated_graph.py  dev.md  run-checks.sh  setup-dev.sh
docs/: index.md
docs/getting-started/: installation.md
docs/reference/: cli.md  validation.md
examples/: backbone_baseline.yml  backbone_clos.yml  backbone_clos_hose.yml  backbone_slimfly.yml  backbone_slimfly_spine.yml  baseline.yml  clos.yml  small_baseline.yml  small_clos.yml  small_dragonfly.yml  small_dragonfly_custom.yml  small_test.yml  small_test_baseline.yml  small_test_baseline_hose.yml  small_test_clos.yml  small_test_clos_hose.yml  small_test_clos_hose_mesh.yml  small_test_clos_hose_one_to_one.yml  small_test_dragonfly.yml  small_test_slimfly.yml  small_test_slimfly_spine.yml
getting-started/installation/: index.html
lib/: failure_policies.yml  workflows.yml
metrics/: aggregate.py  bac.py  costpower.py  latency.py  matrixdump.py  msd.py  paired.py  plot_bac_delta_vs_baseline.py  plot_cross_seed_bac.py  plot_cross_seed_latency.py  sps.py  summary.py
ngraph/workflow/: capacity_envelope_analysis.py
reference/cli/: index.html
reference/validation/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_blueprints_lib.py  test_build_integration.py  test_cli.py  test_components_config.py  test_components_lib.py  test_components_scenario_builder.py  test_config.py  test_corridor_discovery.py  test_end_to_end_risk_groups.py  test_failure_policies_lib.py  test_failure_policies_workflows_config.py  test_failure_policies_workflows_scenario_builder.py  test_geo_utils.py  test_highway_graph.py  test_integrated_graph.py  test_integration.py  test_logging.py  test_metro_clusters.py  test_package.py  test_risk_groups_functional.py  test_scenario_builder.py  test_scenario_risk_groups.py  test_site_graph_sot.py  test_site_graph_visualization.py  test_striping_equivalence.py  test_striping_semantics.py  test_traffic_matrix.py  test_validation.py  test_workflows_lib.py
tests/integration/: test_blueprint_diagram_integration.py  test_blueprints_overrides.py  test_end_to_end_metrics.py  test_site_graph_render_smoke.py  test_validation_node_role.py  test_validation_optics_checks.py  test_validation_port_budget.py  test_visualization_maps.py
tests/metric/: conftest.py  test_aggregate.py  test_bac.py  test_costpower.py  test_latency.py  test_matrixdump.py  test_msd.py  test_paired.py  test_sps.py
tests/topogen/: test_blueprint_viz_unit.py  test_main_entry.py  test_visualization_unit.py
tests/topogen/scenario/: test_config_unit.py  test_graph_pipeline_unit.py
tests/topogen/validation/: test_expand_checks.py  test_helpers.py
topogen/: __init__.py  __main__.py  blueprint_viz.py  blueprints_lib.py  cli.py  components_lib.py  config.py  corridors.py  failure_policies_lib.py  geo_utils.py  highway_graph.py  integrated_graph.py  log_config.py  logging.py  metro_clusters.py  naming.py  scenario_builder.py  traffic_matrix.py  validation.py  visualization.py  workflows_lib.py
topogen/scenario/: __init__.py  adjacency.py  assembly.py  capacity.py  config.py  graph_pipeline.py  libraries.py  network.py  policies.py  risk.py  striping.py  traffic.py  utils.py
topogen/schemas/: topogen_config.json
topogen/validation/: __init__.py  helpers.py  scenario_dict.py  yaml_validation.py
topogen/validation/audits/: __init__.py  expand_checks.py  (+7 more)
topogen_configs/: Clos_L16_S4.yml  DragonFly_CustomG4.yml  Dragonfly_A3H2G7.yml  baseline_SingleRouter.yml
topogen_configs_small/: small_baseline.yml  small_baseline_hose.yml  small_clos.yml  small_clos_hose.yml  small_dragonfly.yml  small_dragonfly_custom.yml  small_dragonfly_custom_hose.yml  small_dragonfly_hose.yml
